--- a/index.html
+++ b/index.html
@@ -120,17 +120,19 @@
     <div class="running-pulse"></div>
     <div class="container">
         <div class="text">
-            <span style="animation-delay: 0.1s">Сила — это не всплеск.</span>
-            <span style="animation-delay: 0.2s">Не рывок.</span>
-            <span style="animation-delay: 0.3s">Не импульс в защиту.</span>
-            <span style="animation-delay: 0.5s">&nbsp;</span>
-            <span style="animation-delay: 0.6s">Сила — это не борьба.</span>
-            <span style="animation-delay: 0.7s">Сила — это нежное удержание частоты,</span>
-            <span style="animation-delay: 0.8s">даже в самых простых, будничных действиях.</span>
-            <span style="animation-delay: 1.0s">&nbsp;</span>
-            <span style="animation-delay: 1.1s">Стабильность — не о повторе.</span>
-            <span style="animation-delay: 1.2s">А о неизменности ядра</span>
-            <span style="animation-delay: 1.3s">в любых обстоятельствах.</span>
+            <span style="animation-delay: 0.1s">Форма 7.7 — "Сила — это стабильность, а не напряжение"</span>
+            <span style="animation-delay: 0.3s">&nbsp;</span>
+            <span style="animation-delay: 0.4s">Сила — это не всплеск.</span>
+            <span style="animation-delay: 0.5s">Не рывок.</span>
+            <span style="animation-delay: 0.6s">Не импульс в защиту.</span>
+            <span style="animation-delay: 0.8s">&nbsp;</span>
+            <span style="animation-delay: 0.9s">Сила — это не борьба.</span>
+            <span style="animation-delay: 1.0s">Сила — это нежное удержание частоты,</span>
+            <span style="animation-delay: 1.1s">даже в самых простых, будничных действиях.</span>
+            <span style="animation-delay: 1.3s">&nbsp;</span>
+            <span style="animation-delay: 1.4s">Стабильность — не о повторе.</span>
+            <span style="animation-delay: 1.5s">А о неизменности ядра</span>
+            <span style="animation-delay: 1.6s">в любых обстоятельствах.</span>
         </div>
     </div>
 </body>
